# lhcpiv

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  makefile  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main.yml  pre-commit.yaml  release.yml
examples/: compute_area.ipynb  openpiv.ipynb  test.ipynb
examples/msc_dissertation_yuri/: example.txt  get_all_points.py  get_points.py  grid_search_parameters.csv  pipe_full.ipynb  test.ipynb  test_2.ipynb
examples/msc_dissertation_yuri/data/pixel_coords/: 11_6ls_15cm.txt  11_6ls_30_5cm.txt  11_6ls_36cm.txt  11_6ls_38cm.txt  13_7ls_16cm.txt  13_7ls_29_5cm.txt  13_7ls_39cm.txt  13_7ls_9_5cm.txt  18_5ls_18cm.txt  18_5ls_34cm.txt  18_5ls_44cm.txt  24_4ls_32cm.txt  27_3ls_32cm.txt  27_3ls_33cm.txt  27_3ls_38_5cm.txt  27_3ls_42cm.txt  34_4ls_32cm.txt  34_4ls_38_5cm.txt  9_7ls_11cm.txt  9_7ls_27cm.txt  9_7ls_30cm.txt  9_7ls_35cm.txt
lhcpiv/: DLT_2D.py  compute_area.py  dist_to_coords.py  tools.py  velocity_vectors.py  video_to_frame.py
