[tool.poetry]
name = "lhcpiv"
version = "0.0.3"
description = "A package to calculate flow in rivers"
authors = ["Yuri Ishizawa <yuriishizawa@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
gekko = "^1.0.6"
numpy = "^1.26.0"
opencv-python = "^4.8.0.76"
openpiv = "0.25.1"
pandas = "^2.1.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
seaborn = "^0.12.2"
pytest = "^7.4.2"
black = "^23.9.1"
pylint = "^2.17.5"
scikit-learn = "^1.3.0"
pre-commit = "^3.4.0"
isort = "^5.12.0"

[tool.pylint.typecheck]
generated-members = "cv2.*"
extension-pkg-whitelist = "cv2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
