[tool.poetry]
name = "lhcpiv"
version = "0.0.3"
description = "A package to calculate flow in rivers"
authors = ["Yuri Ishizawa <yuriishizawa@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
gekko = "^1.0.6"
numpy = "^1.26.2"
opencv-python = "^4.8.0.76"
openpiv = "0.23.6"
pandas = "^2.1.3"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
seaborn = "^0.13.0"
pytest = "^7.4.2"
black = "^23.9.1"
pylint = "^3.0.2"
scikit-learn = "^1.3.2"
pre-commit = "^3.4.0"
isort = "^5.12.0"

[tool.pylint.typecheck]
generated-members = "cv2.*"
extension-pkg-whitelist = "cv2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.black-jupyter]
line-length = 88

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
