[project]
name = "lhcpiv"
version = "0.0.3"
description = "A package to calculate flow in rivers"
authors = [{name = "Yuri Ishizawa", email = "yuriishizawa@gmail.com"}]
dependencies = [
    "gekko>=1.0.6",
    "numpy>=1.26.2",
    "opencv-python>=4.8.0.76",
    "openpiv==0.23.6",
    "pandas>=2.1.3",
    "matplotlib>=3.8.2"
]
license = "MIT License"
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ipykernel>=6.29.3",
    "seaborn>=0.13.0",
    "pytest>=7.4.2",
    "black>=23.9.1",
    "pylint>=3.0.2",
    "scikit-learn>=1.3.2",
    "pre-commit>=3.6.2",
    "isort>=5.12.0"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "F",   # Pyflake
    "E",   # Errors
    "W",   # Warnings
    "C90", # mccabe complexity
    "N",
    "PYI",
    "I",
    "UP",
]
ignore = []

# Enable the isort rules.
extend-select = ["I"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
